@@ -139,8 +139,11 @@ default module =
 ; use ssl - This option controls if SSL will be enabled.
 ;use ssl = ${/settings/WEB/server/use ssl}
 
-; url prefix - set prefix to provided urls (/metrics)
+; url prefix - set prefix to provided urls (/exportername)
 ;url prefix = /example
+
+; url match - set pattern which will forwarded to the exporter (use * to forward all urls below the prefix)
+;url match = /metrics
 
 ; kill already running exporters based on path and args
 ;kill orphaned = enabled
